# Voxel

./: CMakeLists.txt  LICENSE  README.md
cmake/: glad.cmake  msvcAbi.cmake  voxelGame.cmake
src/core/: algorithm.hpp  cube.hpp  screenspaceTiling.hpp  types.hpp
src/game/: camera.cpp  camera.hpp  gameObject.cpp  gameObject.hpp
src/graphics/: context.cpp  context.hpp  renderer.cpp  renderer.hpp
src/graphics/D3D11/: D3D11Context.cpp  D3D11Context.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp
src/graphics/OpenGL/: GLContext.cpp  GLContext.hpp  GLRenderer.cpp  GLRenderer.hpp
src/main/: main.cpp
src/platform/: timer.cpp  timer.hpp  window.cpp  window.hpp
src/platform/event/: eventManager.cpp  eventManager.hpp  eventTypes.hpp
src/platform/event/interface/: IInputEvent.cpp  IInputEvent.hpp  IKeyboardEvent.cpp  IKeyboardEvent.hpp  IMouseButtonEvent.cpp  IMouseButtonEvent.hpp  IMouseMovementEvent.cpp  IMouseMovementEvent.hpp  IWindowEvent.cpp  IWindowEvent.hpp
